--- a/app/src/main/res/layout/item_women_clothing.xml
+++ b/app/src/main/res/layout/item_women_clothing.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
+            android:scaleType="centerInside"
             android:src="@drawable/ic_empty"/>
 
         <LinearLayout
@@ -40,12 +40,11 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/img_brand_logo"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/margin_55"
                 android:layout_gravity="start"
                 android:scaleType="fitCenter"
-                android:visibility="gone"
-                app:srcCompat="@mipmap/ic_launcher" />
+                android:visibility="visible"/>
 
         </LinearLayout>
 
