--- a/app/src/main/res/layout/fragment_my_wardrobe.xml
+++ b/app/src/main/res/layout/fragment_my_wardrobe.xml
@@ -6,4 +6,18 @@
 
     <include layout="@layout/fragment_recycler_view" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/margin_16"
+        android:scaleType="center"
+        android:visibility="visible"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:srcCompat="@drawable/ic_add" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
