--- a/app/src/main/res/layout/item_header_seasons.xml
+++ b/app/src/main/res/layout/item_header_seasons.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorAccent">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_title"
         style="@style/TextTitleStyle.Medium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Brand" />
+        android:gravity="start"
+        android:textColor="@color/colorWhite"
+        android:padding="@dimen/margin_5"
+        android:text="Season Name" />
 
 </LinearLayout>
