--- a/app/src/main/res/layout/layout_progress.xml
+++ b/app/src/main/res/layout/layout_progress.xml
@@ -1,73 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/card_progress"
     android:layout_width="wrap_content"
-    android:layout_height="@dimen/margin_125"
-    android:layout_gravity="center"
-    android:minWidth="@dimen/margin_300"
-    android:visibility="gone"
-    app:cardBackgroundColor="@color/colorWhite"
-    app:cardCornerRadius="@dimen/margin_5"
-    app:cardElevation="@dimen/margin_5"
-    app:cardUseCompatPadding="true">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center">
 
     <ProgressBar
         android:id="@+id/progressDialog"
         style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="@dimen/margin_55"
         android:layout_height="@dimen/margin_55"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentLeft="false"
-        android:layout_centerVertical="true"
         android:layout_gravity="center_vertical|center"
         android:layout_marginBottom="@dimen/margin_10"
         android:indeterminate="false"
-        android:indeterminateTint="@color/colorPrimaryDark"
-        android:indeterminateTintMode="src_in"
         android:max="100"
         android:progress="50"
-        android:progressTint="@color/colorPrimaryDark"
-        android:progressTintMode="src_in"
         android:secondaryProgress="100"
-        android:secondaryProgressTint="@color/colorPrimaryDark"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_anchorGravity="left|start" />
-
-    <ProgressBar
-        android:id="@+id/progressDialogHorizontal"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_width="@dimen/margin_300"
-        android:layout_height="@dimen/margin_20"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentLeft="false"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/margin_10"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="@integer/anim_duration_start"
-        android:progressTint="@color/colorPrimaryDark"
-        android:progressTintMode="src_in"
-        android:secondaryProgress="100"
-        android:secondaryProgressTint="@color/colorPrimaryDark"
-        android:secondaryProgressTintMode="src_in"
-        android:visibility="gone"
-        app:layout_anchorGravity="center" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txt_info_message"
         style="@style/TextTitleStyle.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentLeft="false"
-        android:layout_centerInParent="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/margin_10"
         android:layout_marginTop="@dimen/margin_30"
@@ -75,4 +31,4 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/txt_size_14"
         android:visibility="gone" />
-</androidx.cardview.widget.CardView>
+</FrameLayout>
