--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#e9005b</color>
-    <color name="colorPrimaryDark">#ba0049</color>
-    <color name="colorAccent">#000000</color>
+    <color name="colorPrimary">#FF0102</color>
+    <color name="colorPrimaryDark">#DB0608</color>
+    <color name="colorAccent">#F734AF</color>
 
 
     <color name="colorTextLight">#dfdfe0</color>
