--- a/app/src/main/res/layout/detail_layout.xml
+++ b/app/src/main/res/layout/detail_layout.xml
@@ -53,8 +53,7 @@
                         android:layout_width="@dimen/margin_55"
                         android:layout_height="@dimen/margin_55"
                         ads:srcCompat="@drawable/ic_arrow_back_black_24dp"
-                        android:elevation="@dimen/margin_5"
-                        android:background="@color/translucentBlack"/>
+                        android:background="@color/translucentWhite"/>
 
                 </RelativeLayout>
 
@@ -67,6 +66,35 @@
         <include
             android:id="@+id/detail_content"
             layout="@layout/content_detail" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginRight="@dimen/margin_16"
+            android:layout_marginBottom="@dimen/margin_100"
+            android:scaleType="center"
+            android:visibility="visible"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:borderWidth="0dp"
+            app:elevation="6dp"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/ic_delete_black_24dp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/margin_16"
+            android:scaleType="center"
+            android:visibility="visible"
+            app:backgroundTint="@color/colorPrimaryDark"
+            app:borderWidth="0dp"
+            app:elevation="6dp"
+            app:fabSize="normal"
+            app:srcCompat="@drawable/ic_edit_black_24dp" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
