--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -30,5 +30,17 @@
         <item name="android:textSize">@dimen/txt_size_18</item>
     </style>
 
+    <style name="ButtonStyle.Filter">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/bg_button_trans</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:elevation">@dimen/margin_5</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/txt_size_14</item>
+    </style>
+
 
 </resources>
