--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,14 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="TextTitleStyle.Filter">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textSize">@dimen/txt_size_16</item>
+        <item name="android:gravity">start</item>
+        <item name="android:padding">@dimen/margin_5</item>
+        <item name="android:layout_marginTop">@dimen/margin_8</item>
+    </style>
+
     <style name="TextTitleStyle.Medium.Heading">
         <item name="android:textColor">@color/colorTextDark</item>
         <item name="android:textSize">@dimen/txt_size_14</item>
@@ -129,6 +137,17 @@
         <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">@dimen/txt_size_18</item>
+    </style>
+
+    <style name="ButtonStyle.Filter">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/bg_button_trans</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/txt_size_14</item>
     </style>
 
     <style name="Theme.Translucent" parent="AppTheme">
