--- a/app/src/main/res/layout/fragment_add_new.xml
+++ b/app/src/main/res/layout/fragment_add_new.xml
@@ -26,7 +26,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_add_photo"
-            style="@style/ButtonStyle.Transparent"
+            style="@style/ButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
