--- a/app/src/main/res/layout/fragment_my_wardrobe.xml
+++ b/app/src/main/res/layout/fragment_my_wardrobe.xml
@@ -18,6 +18,15 @@
 
             <include layout="@layout/fragment_recycler_view" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/img_empty_placeholder"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:cropToPadding="true"
+                android:scaleType="fitStart"
+                android:src="@drawable/img_empty_list_placeholder" />
+
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fab_filter"
                 android:layout_width="wrap_content"
@@ -28,6 +37,7 @@
                 android:scaleType="center"
                 android:visibility="visible"
                 app:backgroundTint="@color/colorPrimaryDark"
+                app:behavior_autoHide="false"
                 app:borderWidth="0dp"
                 app:elevation="6dp"
                 app:fabSize="normal"
