--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -129,7 +129,7 @@
     </style>
 
     <style name="ButtonStyle.Transparent">
-        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:gravity">center</item>
         <item name="android:background">@drawable/bg_button_trans</item>
         <item name="android:paddingLeft">8dp</item>
