--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,17 +22,14 @@
         android:src="@mipmap/ic_launcher"
         android:visibility="gone" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txt_app_name"
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/app_logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="@string/app_name"
-        android:visibility="gone"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/txt_size_28"
-        android:textStyle="bold" />
+        android:src="@drawable/ic_logo_empty"
+        android:visibility="gone" />
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/btn_facebook"
