--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center"
         android:adjustViewBounds="true"
         android:contentDescription="@string/navigation_drawer_header_content_description"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_logo_empty" />
 
 
     <ImageView
@@ -28,14 +28,6 @@
         android:src="@drawable/ic_xml_grey600_48dp"
         android:tint="@color/colorWhite"
         android:visibility="gone" />
-
-    <TextView
-        style="@style/TextTitleStyle.Large"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center_horizontal"
-        android:text="@string/app_name"
-        android:textColor="@color/colorWhite" />
 
 
 </FrameLayout>
